Moved movie initialization to dao